Fix: Add php extensions and fix path

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
     "require": {
-        "endroid/qr-code": "^6.0"
+        "endroid/qr-code": "^5.0",
+        "ext-gd": "*",
+        "ext-xml": "*"
     }
 }
