Fix: Force add php.ini with .so extensions

--- a/api/php.ini
+++ b/api/php.ini
@@ -1,6 +1,15 @@
+; api/php.ini
 extension=gd
-extension=xml
+extension=gd.so
+extension=libxml
+extension=libxml.so
 extension=simplexml
+extension=simplexml.so
+extension=xml
+extension=xml.so
 extension=dom
+extension=dom.so
 extension=xmlwriter
+extension=xmlwriter.so
 memory_limit=256M
+display_errors=On
